solved date alignment bug

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,9 @@ body {
 }
 #MyDate {
     font-size: 22px;
-    margin: 0px 0px 20px 0px;
+    text-align: center;
+    line-height: 1.3;
+    margin: 0px 0px 0px 0px;
 }
 
 .clock:hover {
